# libm7

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libm7.pc.in
doc/: CMakeLists.txt  Doxyfile.in
doc/markdown/: main.md
ext/: CMakeLists.txt
include/: iterator
include/m7/: AllocatorDeleter.H  AllocatorDeleterDef.H  AllocatorDeleterFwd.H  ArrayView.H  ArrayViewDef.H  ArrayViewFwd.H  Ascii.H  BitOps.H  Exception.H  ExceptionDef.H  ExceptionFwd.H  FrameAllocator.H  FrameAllocatorDef.H  FrameAllocatorFwd.H  PagedPoolAllocator.H  PagedPoolAllocatorDef.H  PagedPoolAllocatorFwd.H  ScopeGuard.H  ScopeGuardDef.H  ScopeGuardFwd.H  StaticArrayView.H  StaticArrayViewDef.H  StaticArrayViewFwd.H  StaticWindowBuffer.H  StaticWindowBufferDef.H  StaticWindowBufferFwd.H  StringTable.H  StringTableDef.H  StringTableFwd.H  StringUtils.H  SystemAllocator.H  SystemAllocatorDef.H  SystemAllocatorFwd.H  WindowBuffer.H  WindowBufferDef.H  WindowBufferFwd.H  WindowIterator.H  WindowIteratorDef.H  WindowIteratorFwd.H  align.H  (+12 more)
include/m7/m/: affine.H  cwise.H  mat.H  math.H  matrix.H  projection.H  transform.H  vec.H  vec_generic_base.H
src/: CMakeLists.txt  Exception.C  FrameAllocator.C  StringTable.C  demangle.C  string_table.C
utest/: ArrayView.C  Ascii.C  CMakeLists.txt  FrameAllocator.C  PagedPoolAllocator.C  StaticArrayView.C  StaticWindowBuffer.C  StringTable.C  WindowBuffer.C  WindowIterator.C  ascii.C  bitops.C  string_table.C  type_traits.C
utest/m/: CMakeLists.txt  mat.C  matrix.C  vec.C
