add_subdirectory(fmt)
add_subdirectory(googletest)

#set(GTEST_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/googletest/googletest/")
#set(GTEST_SRC_DIR "${GTEST_ROOT_DIR}/src")
#set(GTEST_INCLUDE_DIR "${GTEST_ROOT_DIR}/include")
#
#add_library(gtest STATIC "${GTEST_SRC_DIR}/gtest-all.cc")
#add_library(gtest_main STATIC "${GTEST_SRC_DIR}/gtest_main.cc")
#
#target_include_directories(gtest PRIVATE "${GTEST_ROOT_DIR}")
#target_include_directories(gtest PUBLIC "${GTEST_INCLUDE_DIR}")
#target_include_directories(gtest_main PUBLIC "${GTEST_INCLUDE_DIR}")

